--- a/arch/arm/boot/dts/imx7d-var-som.dtsi
+++ b/arch/arm/boot/dts/imx7d-var-som.dtsi
@@ -13,14 +13,6 @@
 		reg = <0x80000000 0x80000000>;
 	};
 
-	backlight {
-		compatible = "pwm-backlight";
-		pwms = <&pwm2 0 5000000>;
-		brightness-levels = <0 4 8 16 32 64 128 255>;
-		default-brightness-level = <7>;
-		status = "okay";
-	};
-
 	pxp_v4l2_out {
 		compatible = "fsl,imx7d-pxp-v4l2", "fsl,imx6sx-pxp-v4l2", "fsl,imx6sl-pxp-v4l2";
 		status = "okay";
@@ -64,54 +56,10 @@
 		};
 	};
 
-	gpio-keys {
-		compatible = "gpio-keys";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_gpio_keys>;
-
-		menu {
-			label = "Menu";
-			gpios = <&gpio2 28 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_MENU>;
-		};
-
-		home {
-			label = "Home";
-			gpios = <&gpio2 29 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_HOME>;
-		};
-
-		back {
-			label = "Back";
-			gpios = <&gpio1 11 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_BACK>;
-		};
-	};
-
 	regulators {
 		compatible = "simple-bus";
 		#address-cells = <1>;
 		#size-cells = <0>;
-
-		reg_usb_otg1_vbus: regulator@0 {
-			compatible = "regulator-fixed";
-			reg = <0>;
-			regulator-name = "usb_otg1_vbus";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			gpio = <&gpio1 5 GPIO_ACTIVE_HIGH>;
-			enable-active-high;
-		};
-
-		reg_usb_otg2_vbus: regulator@1 {
-			compatible = "regulator-fixed";
-			reg = <1>;
-			regulator-name = "usb_otg2_vbus";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			gpio = <&gpio1 7 GPIO_ACTIVE_HIGH>;
-			enable-active-high;
-		};
 
 		reg_sd1_vmmc: regulator@3 {
 			compatible = "regulator-fixed";
@@ -121,15 +69,6 @@
 			gpio = <&gpio5 2 GPIO_ACTIVE_HIGH>;
 			startup-delay-us = <200000>;
 			enable-active-high;
-		};
-
-		reg_can2_3v3: regulator@4 {
-			compatible = "regulator-fixed";
-			reg = <4>;
-			regulator-name = "can2-3v3";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			gpio = <&gpio2 14 GPIO_ACTIVE_LOW>;
 		};
 
 		reg_vref_1v8: regulator@5 {
@@ -148,31 +87,6 @@
 			gpio = <&gpio1 4 GPIO_ACTIVE_HIGH>;	/* WL_REG_ON: PAD_GPIO1_IO04__GPIO1_IO4*/
 			startup-delay-us = <100>;
 			enable-active-high;
-		};
-
-		reg_touch_3v3: reg_touch_3v3 {
-			compatible = "regulator-fixed";
-			regulator-name = "touch_3v3_supply";
-			regulator-always-on;
-			status = "okay";
-		};
-
-		reg_hsic_hub_pwr_on: reg_hsic_hub_pwr_on {
-			compatible = "regulator-fixed";
-			regulator-name = "hsic_hub_pwr_on";
-			gpio = <&gpio1 10 GPIO_ACTIVE_HIGH>;
-			enable-active-high;
-			regulator-always-on;
-			status = "okay";
-		};
-
-		reg_hsic_hub_connect: reg_hsic_hub_connect {
-			compatible = "regulator-fixed";
-			regulator-name = "reg_hsic_hub_connect";
-			gpio = <&gpio1 12 GPIO_ACTIVE_HIGH>;
-			enable-active-high;
-			regulator-always-on;
-			status = "okay";
 		};
 	};
 };
@@ -194,17 +108,6 @@
 &clks {
 	assigned-clocks = <&clks IMX7D_PLL_AUDIO_POST_DIV>;
 	assigned-clock-rates = <884736000>;
-};
-
-&csi1 {
-	csi-mux-mipi = <&gpr 0x14 4>;
-	status = "okay";
-
-	port {
-		csi_ep: endpoint {
-			remote-endpoint = <&csi_mipi_ep>;
-		};
-	};
 };
 
 &epxp {
@@ -242,20 +145,6 @@
 	};
 };
 
-&ecspi2 {
-	fsl,spi-num-chipselects = <1>;
-	pinctrl-names = "default", "sleep";
-	pinctrl-0 = <&pinctrl_ecspi2>;
-	cs-gpios = <&gpio4 23 0>;
-	status = "okay";
-
-	spidev0: spi@0 {
-		compatible = "spidev";
-		reg = <0>;
-		spi-max-frequency = <54000000>;
-	};
-};
-
 &fec1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet1>;
@@ -268,18 +157,21 @@
 	phy-handle = <&ethphy0>;
 	fsl,magic-packet;
 	status = "okay";
+	phy-reset-gpios = <&gpio5 11 GPIO_ACTIVE_LOW>;
+        phy-reset-duration=<100>;
+        phy-reset-on-resume;
 
 	mdio {
 		#address-cells = <1>;
 		#size-cells = <0>;
 
 		ethphy0: ethernet-phy@0 {
-			compatible = "ethernet-phy-ieee802.3-c22";
+			compatible = "ethernet-phy-id004d.d074","ethernet-phy-ieee802.3-c22";
 			reg = <0>;
 		};
 
 		ethphy1: ethernet-phy@1 {
-			compatible = "ethernet-phy-ieee802.3-c22";
+			compatible = "ethernet-phy-id004d.d074","ethernet-phy-ieee802.3-c22";
 			reg = <1>;
 		};
 	};
@@ -296,32 +188,9 @@
 	phy-mode = "rgmii";
 	phy-handle = <&ethphy1>;
 	phy-reset-gpios = <&gpio4 3 GPIO_ACTIVE_LOW>;
+        phy-reset-duration=<100>;
+        phy-reset-on-resume;
 	fsl,magic-packet;
-	status = "okay";
-};
-
-&mipi_csi {
-	clock-frequency = <240000000>;
-	status = "okay";
-	port {
-		mipi_sensor_ep: endpoint1 {
-			remote-endpoint = <&ov5640_mipi_ep>;
-			data-lanes = <2>;
-			csis-hs-settle = <13>;
-			csis-clk-settle = <2>;
-			csis-wclk;
-		};
-
-		csi_mipi_ep: endpoint2 {
-			remote-endpoint = <&csi_ep>;
-		};
-	};
-};
-
-&flexcan2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_flexcan2>;
-	xceiver-supply = <&reg_can2_3v3>;
 	status = "okay";
 };
 
@@ -439,65 +308,6 @@
 		clock-names = "mclk";
 		status = "okay";
 	};
-
-	/* DS1307 RTC module */
-	rtc@0x68 {
-		compatible = "dallas,ds1307";
-		reg = <0x68>;
-	};
-
-	ov5640_mipi: ov5640_mipi@3c {
-		compatible = "ovti,ov5640_mipi";
-		reg = <0x3c>;
-		clocks = <&clks IMX7D_CLK_DUMMY>;
-		clock-names = "csi_mclk";
-		csi_id = <0>;
-		pwn-gpios = <&gpio4 9 1>;
-		rst-gpios = <&gpio4 10 0>;
-		AVDD-supply = <&vgen6_reg>;
-		mclk = <24000000>;
-		mclk_source = <0>;
-		port {
-			ov5640_mipi_ep: endpoint {
-				remote-endpoint = <&mipi_sensor_ep>;
-			};
-		};
-	};
-};
-
-&i2c4 {
-	clock-frequency = <100000>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c4>;
-	status = "okay";
-
-	ft5x06_ts@38 {
-		compatible = "focaltech,5x06";
-		reg = <0x38>;
-		focaltech,family-id = <0x54>;
-		interrupt-parent = <&gpio2>;
-		interrupts = <30 0>;
-		vdd-supply = <&reg_touch_3v3>;
-		vcc_i2c-supply = <&reg_touch_3v3>;
-		focaltech,irq-gpio = <&gpio2 30 0x00>;
-		focaltech,display-coords = <0 0 800 480>;
-		focaltech,name = "ft6x06";
-		focaltech,no-force-update;
-		focaltech,group-id = <1>;
-		focaltech,hard-reset-delay-ms = <20>;
-		focaltech,soft-reset-delay-ms = <150>;
-		focaltech,num-max-touches = <2>;
-		focaltech,fw-name = "ft_8610_qrd_fw.bin";
-		focaltech,fw-delay-aa-ms = <100>;
-		focaltech,fw-delay-55-ms = <30>;
-		focaltech,fw-upgrade-id1 = <0x79>;
-		focaltech,fw-upgrade-id2 = <0x08>;
-		focaltech,fw-delay-readid-ms = <10>;
-		focaltech,fw-delay-era-flsh-ms = <2000>;
-		focaltech,fw-auto-cal;
-		focaltech,mirror_h;
-		focaltech,mirror_v;
-	};
 };
 
 &gpmi {
@@ -512,33 +322,83 @@
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
 				MX7D_PAD_GPIO1_IO14__GPIO1_IO14		0x80000000  /* bt reg on */
-				MX7D_PAD_EPDC_PWR_COM__GPIO2_IO30	0x80000000  /* capacitive touch irq */
-				MX7D_PAD_SD2_RESET_B__GPIO5_IO11	0x59  /* ethphy0 reset */
-				MX7D_PAD_UART2_TX_DATA__GPIO4_IO3	0x59  /* ethphy1 reset */
-				MX7D_PAD_GPIO1_IO10__GPIO1_IO10		0x59  /* hsic hub reset */
-				MX7D_PAD_GPIO1_IO12__GPIO1_IO12		0x59  /* hsic hub connect */
-				MX7D_PAD_GPIO1_IO13__GPIO1_IO13		0x59  /* LED */
-				MX7D_PAD_SD1_WP__CCM_CLKO2		0xb0  /* camera clock */
-			>;
-		};
+				MX7D_PAD_SD2_RESET_B__GPIO5_IO11	0x79  /* ethphy0 reset */
+				MX7D_PAD_UART2_TX_DATA__GPIO4_IO3	0x79  /* ethphy1 reset */
 
-		pinctrl_gpio_keys: gpio_keysgrp {
-			fsl,pins = <
-				MX7D_PAD_EPDC_BDR0__GPIO2_IO28		0x32
-				MX7D_PAD_EPDC_BDR1__GPIO2_IO29		0x32
-				MX7D_PAD_GPIO1_IO11__GPIO1_IO11		0x32
+				MX7D_PAD_SD1_CD_B__GPIO5_IO0		0x69
+				MX7D_PAD_EPDC_DATA01__GPIO2_IO1		0x69
+				MX7D_PAD_EPDC_DATA04__GPIO2_IO4		0x69
+				MX7D_PAD_EPDC_DATA09__GPIO2_IO9		0x69
+				MX7D_PAD_EPDC_DATA15__GPIO2_IO15	0x69
+				MX7D_PAD_EPDC_DATA03__GPIO2_IO3		0x69
+				MX7D_PAD_EPDC_DATA02__GPIO2_IO2		0x69
+				MX7D_PAD_EPDC_DATA00__GPIO2_IO0		0x69
+				MX7D_PAD_EPDC_DATA11__GPIO2_IO11	0x69
+				MX7D_PAD_LCD_DATA22__GPIO3_IO27		0x69
+				MX7D_PAD_EPDC_DATA08__GPIO2_IO8		0x69
+				MX7D_PAD_EPDC_DATA07__GPIO2_IO7		0x69
+				MX7D_PAD_EPDC_DATA06__GPIO2_IO6		0x69
+				MX7D_PAD_LCD_DATA01__GPIO3_IO6		0x69
+				MX7D_PAD_EPDC_DATA12__GPIO2_IO12	0x69
+				MX7D_PAD_LCD_DATA02__GPIO3_IO7		0x69
+				MX7D_PAD_LCD_DATA16__GPIO3_IO21		0x69
+				MX7D_PAD_LCD_DATA03__GPIO3_IO8		0x69
+				MX7D_PAD_LCD_DATA18__GPIO3_IO23		0x69
+				MX7D_PAD_EPDC_BDR0__GPIO2_IO28		0x69
+				MX7D_PAD_EPDC_BDR1__GPIO2_IO29		0x69
+				MX7D_PAD_ECSPI2_MISO__GPIO4_IO22	0x69
+				MX7D_PAD_ECSPI2_MOSI__GPIO4_IO21	0x69
+				MX7D_PAD_ECSPI2_SS0__GPIO4_IO23		0x69
+				MX7D_PAD_ECSPI2_SCLK__GPIO4_IO20	0x69
+				MX7D_PAD_I2C3_SDA__GPIO4_IO13		0x69
+				MX7D_PAD_I2C3_SCL__GPIO4_IO12		0x69
+				MX7D_PAD_SD1_WP__GPIO5_IO1		0x69
+				MX7D_PAD_I2C4_SDA__GPIO4_IO15		0x69
+				MX7D_PAD_I2C4_SCL__GPIO4_IO14		0x69
+				MX7D_PAD_SAI2_TX_BCLK__GPIO6_IO20	0x69
+				MX7D_PAD_SAI2_TX_SYNC__GPIO6_IO19	0x69
+				MX7D_PAD_GPIO1_IO10__GPIO1_IO10		0x69
+				MX7D_PAD_GPIO1_IO12__GPIO1_IO12		0x69
+				MX7D_PAD_GPIO1_IO11__GPIO1_IO11		0x69
+				MX7D_PAD_LCD_DATA21__GPIO3_IO26		0x69
+				MX7D_PAD_EPDC_DATA14__GPIO2_IO14	0x69
+				MX7D_PAD_LCD_DATA23__GPIO3_IO28		0x69
+				MX7D_PAD_LCD_DATA19__GPIO3_IO24		0x69
+				MX7D_PAD_LCD_DATA20__GPIO3_IO25		0x69
+				MX7D_PAD_EPDC_DATA05__GPIO2_IO5		0x69
+				MX7D_PAD_EPDC_DATA13__GPIO2_IO13	0x69
+				MX7D_PAD_LCD_RESET__GPIO3_IO4		0x69
+				MX7D_PAD_LCD_DATA17__GPIO3_IO22		0x69
+				MX7D_PAD_LCD_DATA00__GPIO3_IO5		0x69
+				MX7D_PAD_LCD_ENABLE__GPIO3_IO1		0x69
+				MX7D_PAD_LCD_HSYNC__GPIO3_IO2		0x69
+				MX7D_PAD_LCD_VSYNC__GPIO3_IO3		0x69
+				MX7D_PAD_LCD_CLK__GPIO3_IO0		0x69
+				MX7D_PAD_LCD_DATA07__GPIO3_IO12		0x69
+				MX7D_PAD_LCD_DATA08__GPIO3_IO13		0x69
+				MX7D_PAD_LCD_DATA11__GPIO3_IO16		0x69
+				MX7D_PAD_LCD_DATA12__GPIO3_IO17		0x69
+				MX7D_PAD_LCD_DATA06__GPIO3_IO11		0x69
+				MX7D_PAD_LCD_DATA15__GPIO3_IO20		0x69
+				MX7D_PAD_LCD_DATA13__GPIO3_IO18		0x69
+				MX7D_PAD_LCD_DATA10__GPIO3_IO15		0x69
+				MX7D_PAD_LCD_DATA05__GPIO3_IO10		0x69
+				MX7D_PAD_LCD_DATA09__GPIO3_IO14		0x69
+				MX7D_PAD_LCD_DATA04__GPIO3_IO9		0x69
+				MX7D_PAD_LCD_DATA14__GPIO3_IO19		0x69
+				MX7D_PAD_EPDC_PWR_COM__GPIO2_IO30	0x69
+				MX7D_PAD_GPIO1_IO13__GPIO1_IO13		0x69
+				MX7D_PAD_SAI1_RX_BCLK__GPIO6_IO17	0x69
+				MX7D_PAD_SAI2_RX_DATA__GPIO6_IO21	0x69
+				MX7D_PAD_SAI1_RX_SYNC__GPIO6_IO16	0x69
+				MX7D_PAD_SAI2_TX_DATA__GPIO6_IO22	0x69
+
 			>;
 		};
 
 		pinctrl_pcie: pciegrp {
 			fsl,pins = <
 				MX7D_PAD_EPDC_PWR_STAT__GPIO2_IO31	0x79 /* pcie reset */
-			>;
-		};
-
-		pinctrl_mipi_dsi_reset: mipi_dsi_reset_grp {
-			fsl,pins = <
-				MX7D_PAD_SAI1_TX_DATA__GPIO6_IO15	0x1b
 			>;
 		};
 
@@ -557,15 +417,6 @@
 				MX7D_PAD_ECSPI1_MOSI__GPIO4_IO17	0x14
 				MX7D_PAD_ECSPI1_SCLK__GPIO4_IO16	0x14
 				MX7D_PAD_ECSPI1_SS0__DISABLED		0x14
-			>;
-		};
-
-		pinctrl_ecspi2: ecspi2grp {
-			fsl,pins = <
-				MX7D_PAD_ECSPI2_MISO__ECSPI2_MISO	0x2
-				MX7D_PAD_ECSPI2_MOSI__ECSPI2_MOSI	0x2
-				MX7D_PAD_ECSPI2_SCLK__ECSPI2_SCLK	0x2
-				MX7D_PAD_ECSPI2_SS0__GPIO4_IO23		0x2
 			>;
 		};
 
@@ -605,13 +456,6 @@
 			>;
 		};
 
-		pinctrl_flexcan2: flexcan2grp {
-			fsl,pins = <
-				MX7D_PAD_I2C3_SCL__FLEXCAN2_RX		0x59
-				MX7D_PAD_I2C3_SDA__FLEXCAN2_TX		0x59
-			>;
-		};
-
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
 				MX7D_PAD_I2C1_SDA__I2C1_SDA	0x4000007f
@@ -626,68 +470,12 @@
 			>;
 		};
 
-		pinctrl_i2c3: i2c3grp {
-			fsl,pins = <
-				MX7D_PAD_I2C3_SDA__I2C3_SDA	0x4000007f
-				MX7D_PAD_I2C3_SCL__I2C3_SCL	0x4000007f
-			>;
-		};
-
-		pinctrl_i2c4: i2c4grp {
-			fsl,pins = <
-				MX7D_PAD_I2C4_SDA__I2C4_SDA	0x4000007f
-				MX7D_PAD_I2C4_SCL__I2C4_SCL	0x4000007f
-			>;
-		};
-
-		pinctrl_lcdif_dat: lcdifdatgrp {
-			fsl,pins = <
-				MX7D_PAD_LCD_DATA00__GPIO3_IO5		0x79
-				MX7D_PAD_LCD_DATA02__LCD_DATA2		0x79
-				MX7D_PAD_LCD_DATA03__LCD_DATA3		0x79
-				MX7D_PAD_EPDC_DATA04__LCD_DATA4		0x79
-				MX7D_PAD_EPDC_DATA05__LCD_DATA5		0x79
-				MX7D_PAD_EPDC_DATA06__LCD_DATA6		0x79
-				MX7D_PAD_EPDC_DATA07__LCD_DATA7		0x79
-				MX7D_PAD_EPDC_DATA10__LCD_DATA10	0x79
-				MX7D_PAD_EPDC_DATA11__LCD_DATA11	0x79
-				MX7D_PAD_EPDC_DATA12__LCD_DATA12	0x79
-				MX7D_PAD_EPDC_DATA13__LCD_DATA13	0x79
-				MX7D_PAD_EPDC_DATA14__LCD_DATA14	0x79
-				MX7D_PAD_EPDC_DATA15__LCD_DATA15	0x79
-				MX7D_PAD_LCD_DATA18__LCD_DATA18		0x79
-				MX7D_PAD_LCD_DATA19__LCD_DATA19		0x79
-				MX7D_PAD_LCD_DATA20__LCD_DATA20		0x79
-				MX7D_PAD_LCD_DATA21__LCD_DATA21		0x79
-				MX7D_PAD_LCD_DATA22__LCD_DATA22		0x79
-				MX7D_PAD_LCD_DATA23__LCD_DATA23		0x79
-			>;
-		};
-
-		pinctrl_lcdif_ctrl: lcdifctrlgrp {
-			fsl,pins = <
-				MX7D_PAD_EPDC_DATA00__LCD_CLK		0x79
-				MX7D_PAD_EPDC_DATA02__LCD_VSYNC		0x79
-				MX7D_PAD_EPDC_DATA03__LCD_HSYNC		0x79
-				MX7D_PAD_EPDC_DATA01__LCD_ENABLE	0x79
-			>;
-		};
-
 		pinctrl_sai1: sai1grp {
 			fsl,pins = <
 				MX7D_PAD_ENET1_RX_CLK__SAI1_TX_BCLK	0x1f
 				MX7D_PAD_ENET1_CRS__SAI1_TX_SYNC	0x1f
 				MX7D_PAD_ENET1_COL__SAI1_TX_DATA0	0x30
 				MX7D_PAD_ENET1_TX_CLK__SAI1_RX_DATA0	0x1f
-			>;
-		};
-
-		pinctrl_sai2: sai2grp {
-			fsl,pins = <
-				MX7D_PAD_SAI2_TX_BCLK__SAI2_TX_BCLK	0x1f
-				MX7D_PAD_SAI2_TX_SYNC__SAI2_TX_SYNC	0x1f
-				MX7D_PAD_SAI2_TX_DATA__SAI2_TX_DATA0	0x30
-				MX7D_PAD_SAI2_RX_DATA__SAI2_RX_DATA0	0x1f
 			>;
 		};
 
@@ -704,15 +492,6 @@
 			>;
 		};
 
-		pinctrl_uart2: uart2grp {
-			fsl,pins = <
-				MX7D_PAD_LCD_ENABLE__UART2_DCE_TX	0x79
-				MX7D_PAD_LCD_CLK__UART2_DCE_RX		0x79
-				MX7D_PAD_LCD_VSYNC__UART2_DCE_CTS	0x79
-				MX7D_PAD_LCD_HSYNC__UART2_DCE_RTS	0x79
-			>;
-		};
-
 		pinctrl_uart3: uart3grp {
 			fsl,pins = <
 				MX7D_PAD_UART3_TX_DATA__UART3_DCE_TX	0x79
@@ -721,10 +500,8 @@
 				MX7D_PAD_UART3_RTS_B__UART3_DCE_RTS	0x79
 			>;
 		};
-
 		pinctrl_usdhc1_gpio: usdhc1_gpiogrp {
 			fsl,pins = <
-				MX7D_PAD_SD1_CD_B__GPIO5_IO0		0x59 /* CD */
 				MX7D_PAD_SD1_RESET_B__GPIO5_IO2		0x59 /* vmmc */
 				MX7D_PAD_GPIO1_IO08__SD1_VSELECT	0x59 /* VSELECT */
 			>;
@@ -809,38 +586,6 @@
 	};
 };
 
-&lcdif {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_lcdif_dat
-		     &pinctrl_lcdif_ctrl>;
-	display = <&display0>;
-	status = "okay";
-
-	display0: display0 {
-		bits-per-pixel = <32>;
-		bus-width = <24>;
-
-		display-timings {
-			native-mode = <&timing0>;
-			timing0: timing0 {
-				clock-frequency = <29232000>;
-				hactive = <800>;
-				vactive = <480>;
-				hfront-porch = <40>;
-				hback-porch = <40>;
-				hsync-len = <48>;
-				vback-porch = <29>;
-				vfront-porch = <13>;
-				vsync-len = <3>;
-				hsync-active = <0>;
-				vsync-active = <0>;
-				de-active = <1>;
-				pixelclk-active = <0>;
-			};
-		};
-	};
-};
-
 &pcie {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pcie>;
@@ -860,52 +605,21 @@
 	status = "okay";
 };
 
-&sai2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_sai2>;
-	assigned-clocks = <&clks IMX7D_SAI2_ROOT_SRC>,
-			  <&clks IMX7D_SAI2_ROOT_CLK>;
-	assigned-clock-parents = <&clks IMX7D_PLL_AUDIO_POST_DIV>;
-	assigned-clock-rates = <0>, <36864000>;
-	status = "okay";
-};
-
 &sdma {
-	status = "okay";
-};
-
-&pwm2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_pwm2>;
 	status = "okay";
 };
 
 &iomuxc_lpsr {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_hog_2 &pinctrl_usbotg2_pwr_2>;
+	pinctrl-0 = <&pinctrl_hog_2>;
 
 	imx7d-sdb {
 		pinctrl_hog_2: hoggrp-2 {
 			fsl,pins = <
-				MX7D_PAD_GPIO1_IO05__GPIO1_IO5		0x14
-			>;
-		};
-
-		pinctrl_pwm2: pwm2grp {
-			fsl,pins = <
-				MX7D_PAD_GPIO1_IO02__PWM2_OUT		0x110b0
-			>;
-		};
-
-		pinctrl_usbotg2_pwr_2: usbotg2-2 {
-			fsl,pins = <
-				MX7D_PAD_GPIO1_IO07__GPIO1_IO7		0x14
-			>;
-		};
-
-		pinctrl_wdog: wdoggrp {
-			fsl,pins = <
-				MX7D_PAD_GPIO1_IO00__WDOD1_WDOG_B	0x74
+				MX7D_PAD_GPIO1_IO07__GPIO1_IO7		0x59
+				MX7D_PAD_GPIO1_IO05__GPIO1_IO5		0x59
+				MX7D_PAD_GPIO1_IO02__GPIO1_IO2		0x59
+				MX7D_PAD_GPIO1_IO00__GPIO1_IO0		0x59
 			>;
 		};
 
@@ -939,15 +653,6 @@
 	status = "okay";
 };
 
-&uart2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart2>;
-	assigned-clocks = <&clks IMX7D_UART2_ROOT_SRC>;
-	assigned-clock-parents = <&clks IMX7D_PLL_SYS_MAIN_240M_CLK>;
-	fsl,uart-has-rtscts;
-	status = "okay";
-};
-
 &uart3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart3>;
@@ -956,20 +661,16 @@
 	fsl,uart-has-rtscts;
 	status = "okay";
 };
-
 &usbh {
 	status = "okay";
-	vbus-supply = <&reg_hsic_hub_pwr_on>;
 };
 
 &usbotg1 {
-	vbus-supply = <&reg_usb_otg1_vbus>;
-	dr_mode = "host";
+	dr_mode = "peripheral";
 	status = "okay";
 };
 
 &usbotg2 {
-	vbus-supply = <&reg_usb_otg2_vbus>;
 	dr_mode = "host";
 	status = "okay";
 };
@@ -979,7 +680,7 @@
 	pinctrl-0 = <&pinctrl_usdhc1>, <&pinctrl_usdhc1_gpio>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>, <&pinctrl_usdhc1_gpio>;
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>, <&pinctrl_usdhc1_gpio>;
-	cd-gpios = <&gpio5 0 GPIO_ACTIVE_LOW>;
+	non-removable;
 	no-1-8-v;
 	enable-sdio-wakeup;
 	keep-power-in-suspend;
@@ -1003,12 +704,6 @@
 
 &usdhc3 {
 	status = "disabled";
-};
-
-&wdog1 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_wdog>;
-	fsl,wdog_b;
 };
 
 &snvs_rtc {
