--- a/arch/arm64/configs/imx8_var_defconfig
+++ b/arch/arm64/configs/imx8_var_defconfig
@@ -177,8 +177,8 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_SCSI_LOWLEVEL is not set
 CONFIG_ATA=y
 # CONFIG_SATA_PMP is not set
-CONFIG_SATA_AHCI=m
-CONFIG_AHCI_IMX=m
+CONFIG_SATA_AHCI=y
+CONFIG_AHCI_IMX=y
 # CONFIG_ATA_SFF is not set
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=m
